crates/llvmkit-ir/tests/compile_fail/vec_insert_wrong_element.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/vec_insert_wrong_element.rs:31:36
   |
31 |             .build_vec_insert(vec, wrong, i32_ty.const_int(0_i32), "x") //~ ERROR mismatched types
   |              ----------------      ^^^^^ expected `IntValue<'_, i32>`, found `FloatValue<'_, f32>`
   |              |
   |              arguments to this method are incorrect
   |
   = note: expected struct `IntValue<'_, i32, Brand<'_>>`
              found struct `FloatValue<'_, f32>`
note: method defined here
  --> src/ir_builder.rs
   |
   |     pub fn build_vec_insert<E, L, W, I, Name>(
   |            ^^^^^^^^^^^^^^^^
